# sisy-svn

./: ChangeLog  CheckPoints  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  configure  configure.in  mkinstalldirs
debian/: Makefile.am  Makefile.in  changelog  control  copyright  rules  sisy.install  sisy.substvars
instruments/: Makefile.am  Makefile.in  sisy.conf
src/: Makefile.am  Makefile.in  audio.c  audio.h  audio_alsa.c  audio_file.c  audio_oss.c  bank.c  bank.h  config.h.in  debug.h  instru.c  instru.h  instru_parse.c  instru_parse.h  lex.c  lex.l  list.c  list.h  math.c  math.h  misc.h  module.c  module.h  obj.c  obj.h  oscillators.c  oscillators.h  parse.c  parse.h  parse.y  sisy.c  sisy.h  timestamp.c  timestamp.h
src/modules/: ADSR.c  ADSR.h  DFOF.c  DFOF.h  Makefile.am  Makefile.in  biquad.c  biquad.h  biquad_f.c  biquad_f.h  delay.c  delay.h  impulse.c  impulse.h  mixer.c  mixer.h  square.c  square.h  vibro.c  vibro.h
tools/: Makefile.am  Makefile.in  view_sound.c
