dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/sisy.c)
AC_ARG_PROGRAM
AM_INIT_AUTOMAKE(sisy,0.7.15)
AM_CONFIG_HEADER(src/config.h)

dnl AM_LDFLAGS=-lasound
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_YACC
AC_PROG_LEX

dnl Checks for libraries.
dnl AC_CHECK_LIB(asound, snd_seq_open, , AC_MSG_ERROR("sisy needs the Alsa sound library."))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
dnl AC_ALLOCA

AC_SUBST([INCLUDEDIR])

CFLAGS="$CFLAGS -Wall -O3"

PKG_CHECK_MODULES(SIMILI, simili >= 0.1.0, , AC_MSG_ERROR(*** simili (SImple MIdi LIbrary) not found))
PKG_CHECK_MODULES(LIBSNDFILE, sndfile >= 0.15.0, , AC_MSG_ERROR(*** libsndfile >= 0.15.0 not found and not tested with previous versions))
PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.0.0)

AC_OUTPUT(Makefile src/Makefile src/modules/Makefile instruments/Makefile debian/Makefile tools/Makefile)
